sunrise name attempt fix

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/jquery.mcustomscrollbar/3.0.6/jquery.mCustomScrollbar.min.css">
     <link rel="stylesheet" href="<%= BASE_URL %>css/selectboxit.min.css">
     <base href="/" />
-    <title>SUNRISE</title>
+    <title>SUNRISE (Nihin's Demo)</title>
   </head>
   <body>
     <noscript>
